--- a/Home/style.css
+++ b/Home/style.css
@@ -310,3 +310,56 @@ button:hover {
     margin-top: 40px;
     border-radius: 10px; /* Rounded corners */
 }
+
+/* Style for the consent popup */
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Ensures it's centered */
+    width: 300px;  /* Define a width for the popup */
+    background-color: rgb(255, 255, 255);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    z-index: 1000;
+}
+
+.popup-content {
+    background-color: peachpuff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 300px;
+}
+
+.popup h2 {
+    margin: 0 0 20px;
+    font-size: 18px;
+    
+}
+
+.popup-buttons {
+    display: flex;
+    justify-content: space-around;
+}
+
+.popup button {
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.popup button:hover {
+    background-color: #45a049;
+}
+
+#emotion-name {
+    font-weight: bold;
+}
